- default title - custom title max 25 characters
- player names dynamically change; added to the playerName string array in index5.js - displays "empty" if the player spot is not filled
- cannot create game while one is in progress - must end game to create a new one
- created a real time calculation on the starting hand so the max of the num input changes based on the current player count even before game creation
	- if the value is too high for the current player number, it will set the value to the highest possible
	- error message kept just in case because of the one second delay
- connected a new cards.js to the index5.js - changed the string array into Card object pointers with value and suite variables.
	- myDeck.deck[*index*].value and myDeck.deck[*index*].suite to access
- the error returns in index.html changed from if to switch statement
- working shuffle method. call using myDeck.shuffle();
	- check shuffle in console log using
		console.log(myDeck.deck); // the deck in order
		myDeck.shuffle(); // call shuffle
		console.log(myDeck.deck); // deck after shuffle
- myDeck points to a new Deck object and reshuffles on /create
- player hand is generated and sent once the player document.ready if starting hand is > 0
	- draws the same way as irl - from the index 0 (top) of the pile
	- this data is saved in the server upon creation (/player2)
	- if the game has not ended yet, the player will rejoin with their previous hand
		- this can be changed to not save data later on
Need:
- a draw card button, table button, and discard along with all their functions
	- store player hand in an array within an array - accessable to players via their id
- a canvas that is set to display 3 players and yourself - interactable only in 3 sections
	- should draw the appropriate cards in the right order based on the 
- player names change according to each player's own nameset
- discard pile and main pile - change main to draw card and discard to send only