@@ -1,0 +1,8 @@
+module.exports = class Player {
+    constructor(_name) {
+        this.hand = [];
+        this.id = 0;
+        this.realId = 0;
+        this.name = "Player " + this.id;
+    }
+}
